Text overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   }
 
   .panel-body {
-    @apply text-wrap text-xl text-white flex flex-col;
+    @apply text-wrap text-xl text-white flex flex-col overflow-hidden;
   }
 
   .panel-button {
